# Tetris_kyy

./: .gitignore  README.md
client/: config.json  main.py  requirements.txt
client/game/: network.py  tetris.py
server/: CMakeLists.txt
server/src/: game_server.cpp  game_server.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp
